<resources>
    <string name="app_name">GGC Connect</string>
    <string name="welcome">Welcome</string>
    <string name="credits">Credits</string>
    <string name="links">Links</string>
    <string name="map_label">Campus Map</string>
    <string name="direction_label">Campus Direction</string>
    <string name="schedule_label">My Schedule</string>
    <string name="directory_label">Directory</string>
    <string name="gym_label">Gym Info</string>
    <string name="text_FindaPlace">Enter your place</string>
    <string name="button_FindaPlace">Find</string>
    <string-array name="websites">
        <item>GGC</item>
        <item>Clawmail</item>
        <item>Banner</item>
        <item>My.GGC</item>
        <item>Calendar</item>
    </string-array>
    <string name="main_title">GGC Connect</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_direction">DirectionActivity</string>
    <string name="title_activity_schedule">My Schedule</string>
    <string name="add_schedule_button_text">Add class</string>
    <string name="dating_label">Social</string>
    <string name="instruction">Instruction</string>
    <string name="thai_ggc_map">GGC map</string>
    <string name="main_facebook_desc">GGC Facebook page</string>
    <string name="main_twitter_desc">GGC Twitter feed</string>
    <string name="main_youtube_desc">GGC YouTube channel</string>
    <string name="main_rss_desc">GGC News and Events RSS Feed</string>
    <string-array name="parent_directories">
        <item>Admissions</item>
        <item>Business</item>
        <item>Education</item>
        <item>Health Sciences</item>
        <item>Liberal Arts</item>
        <item>Science and Technology</item>
    </string-array>
    <string name="title_activity_directory">GGC Directory</string>
    <string name="title_activity_directory_search_web_view">Directory Search</string>
    <string name="schedule_no_classes_popup">You need to add at least one class for the schedule to work. Would you like to add a class now?</string>
    <string name="schedule_add_class">Add Class</string>
    <string name="schedule_edit_class">Edit Class</string>
    <string name="schedule_remove_class">Remove Class</string>
    <string name="title_activity_schedule_update_class">Add Class to Schedule</string>
    <string name="schedule_update_name_label">Class:</string>
    <string name="schedule_add_name_hint">ITEC 2100</string>
    <string name="textview_schedule_update_start_time">Start Time:</string>
    <string name="chk_schedule_update_monday">Monday</string>
    <string name="chk_schedule_update_tuesday">Tuesday</string>
    <string name="chk_schedule_update_wednesday">Wednesday</string>
    <string name="chk_schedule_update_thursday">Thursday</string>
    <string name="btn_schedule_update_start_time">Set Start Time</string>
    <string name="textview_schedule_update_end_time">End Time:</string>
    <string name="btn_schedule_update_end_time">Set End Time</string>
    <string name="textview_schedule_update_days">Days:</string>
    <string name="chk_schedule_update_friday">Friday</string>
    <string name="chk_schedule_update_saturday">Saturday</string>
    <string name="textview_schedule_update_building_location">Building:</string>
    <string name="title_activity_dining_hall">Dining Hall</string>
    <string name="title_activity_reddit">Reddit</string>
    <string-array name="buildings">
        <item>Building A</item>
        <item>Building B</item>
        <item>Building C</item>
        <item>Building F</item>
        <item>Building H</item>
    </string-array>
    <string name="textview_schedule_update_room_location">Room:</string>
    <string name="schedule_update_building_spinner_prompt">Building</string>
    <string name="btn_schedule_update_cancel">Cancel</string>
    <string name="spinner_schedule_update_prompt">Select Building</string>
    <string name="ds_name_label">Name</string>
    <string name="ds_bday_label">Birth date</string>
    <string name="ds_gender_label">Gender</string>
    <string name="ds_add_class_label">Add Class</string>
    <string name="ds_subject_label">Subject</string>
    <string name="ds_course_label">Course</string>
    <string name="ds_section_label">Section</string>
    <string name="ds_search_by_label">Search by</string>
    <string name="ds_next_label">Next</string>
    <string name="ds_done_label">Done</string>
    <string-array name="ds_subject_names">
        <item>Accounting</item>
        <item>Anthropology</item>
        <item>Art</item>
        <item>Biochemistry</item>
        <item>Biology</item>
        <item>Business Administration</item>
        <item>Chemistry</item>
        <item>Chinese</item>
        <item>Communications</item>
        <item>Criminal Justice/Criminology</item>
        <item>Early Childhood Education</item>
        <item>Economics</item>
        <item>Education</item>
        <item>English</item>
        <item>English Literature &amp; Language</item>
        <item>English for Academic Purposes</item>
        <item>Exercise Science</item>
        <item>Film</item>
        <item>Finance</item>
        <item>French</item>
        <item>Geography</item>
        <item>History</item>
        <item>Information Technology</item>
        <item>Integrated Science</item>
        <item>Leadership</item>
        <item>Management</item>
        <item>Marketing</item>
        <item>Mathematics</item>
        <item>Military Science &amp; Leadership</item>
        <item>Music</item>
        <item>Philosophy</item>
        <item>Physical Education</item>
        <item>Physical Science</item>
        <item>Physics</item>
        <item>Political Science</item>
        <item>Psychology</item>
        <item>Reading</item>
        <item>Religion</item>
        <item>Science &amp; Technology</item>
        <item>Sociology</item>
        <item>Spanish</item>
        <item>Special Education</item>
        <item>Theatre</item>
    </string-array>
    <string-array name="ds_subject_codes">
        <item>ACCT</item>
        <item>ANTH</item>
        <item>ARTS</item>
        <item>BCHM</item>
        <item>BIOL</item>
        <item>BUSA</item>
        <item>CHEM</item>
        <item>CHIN</item>
        <item>COMM</item>
        <item>CJCR</item>
        <item>ECED</item>
        <item>ECON</item>
        <item>EDUC</item>
        <item>ENGL</item>
        <item>ELAN</item>
        <item>EAP</item>
        <item>EXSC</item>
        <item>FILM</item>
        <item>FINA</item>
        <item>FREN</item>
        <item>GEOG</item>
        <item>HIST</item>
        <item>ITEC</item>
        <item>ISCI</item>
        <item>LEAD</item>
        <item>MGMT</item>
        <item>MKTG</item>
        <item>MATH</item>
        <item>MSL</item>
        <item>MUSC</item>
        <item>PHIL</item>
        <item>PHED</item>
        <item>PSCI</item>
        <item>PHYS</item>
        <item>POLS</item>
        <item>PSYC</item>
        <item>READ</item>
        <item>RELN</item>
        <item>STEC</item>
        <item>SOCI</item>
        <item>SPAN</item>
        <item>SPED</item>
        <item>THEA</item>
    </string-array>
    <string name="title_activity_saved_search_database">Saved Search Database</string>
    <string name="schedule_update_section">Section:</string>
    <string-array name="schedule_item_options">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string name="schedule_menu_clear_schedule">Clear Schedule</string>
    <string name="cs_term_label">Term</string>
    <string name="cs_subject_label">Subject</string>
    <string name="cs_course_number_label">Course Number</string>
    <string name="cs_course_title_label">Course Title</string>
    <string name="cs_credits_label">Min Credits</string>
    <string name="cs_start_time_label">Start Time</string>
    <string name="cs_end_time_label">End Time</string>
    <string name="cs_days_label">Days</string>
    <string name="cs_instructor_label">Instructor</string>
    <string-array name="cs_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="cs_search_label">Search</string>
    <string name="cs_main_label">Class Search</string>
    <string name="cs_monday_label">M</string>
    <string name="cs_tuesday_label">T</string>
    <string name="cs_wednesday_label">W</string>
    <string name="cs_thursday_label">R</string>
    <string name="cs_friday_label">F</string>
    <string name="cs_saturday_label">S</string>
    <string name="cs_time_label">Time</string>
    <string name="to_do">To Do</string>
    <string name="social">Bulletin Board</string>
    <string name="feedback">Feedback</string>
    <string name="cs_capacity_label">Capacity</string>
    <string name="cs_actual_label">Actual</string>
    <string name="cs_remaining_label">Remaining</string>
    <string name="cs_location_label">Location</string>
    <string name="cs_date_label">Date</string>
    <string name="cs_enrollment_label">Loading enrollment information...</string>
    <string name="cs_loading_error">Error loading enrollment information</string>
    <string name="schedule_menu_settings">Settings</string>
    <string name="schedule_pref_chk_notify_txt">Notify me when my class is about to start</string>
    <string name="schedule_pref_reminder_txt">Reminder:</string>
    <string-array name="schedule_pref_spn_times">
        <item>None</item>
        <item>On time</item>
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>
    <string name="schedule_pref_notify_desc">Remind me when my class is about to start:</string>
    <string-array name="cs_course_actions">
        <item>View more details</item>
        <item>Add to my schedule</item>
    </string-array>
    <string-array name="schedule_add_menu_options">
        <item>Add manually</item>
        <item>Add from banner search</item>
    </string-array>
    <string name="myinfo">Find My Mentor</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gpacalc">GPA Calculator</string>
    <string name="title_activity_gpacalc_semester">GPA Calculator</string>
    <string name="reminders">Reminders</string>
    <string name="reminder_label">Enter your reminder text:</string>
    <string name="example_reminder">Return library books</string>
    <string name="reminder_date_label">Choose a date and time:</string>
    <string name="reminder_button_text">Create Reminder</string>
    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="reminder_result_example">1-1-2013 12:00</string>
    <string name="activity_reminder_lower_text">You\'ll get a device notification to remind you at that time.</string>
    <string name="activity_reminder_upper_text">Your reminder has been set for:</string>
</resources>