<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:padding="5dp"
    tools:context=".ScheduleUpdateActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/name_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textview_schedule_update_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/schedule_update_name_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edittext_schedule_update_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:inputType="text"
                android:layout_weight="1"
                android:ems="10" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/section_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textview_schedule_update_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_update_section"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edittext_schedule_update_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10" />

        </TableRow>

        <TableRow
            android:id="@+id/start_time_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textview_schedule_update_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_schedule_update_start_time"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/btn_schedule_update_start_time"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_schedule_update_start_time" />

        </TableRow>

        <TableRow
            android:id="@+id/end_time_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textview_schedule_update_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_schedule_update_end_time"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/btn_schedule_update_end_time"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_schedule_update_end_time" />

        </TableRow>

        <TableRow
            android:id="@+id/days_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textview_schedule_update_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_schedule_update_days"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/chk_schedule_update_monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chk_schedule_update_monday" />

                <CheckBox
                    android:id="@+id/chk_schedule_update_tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chk_schedule_update_tuesday" />

                <CheckBox
                    android:id="@+id/chk_schedule_update_wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chk_schedule_update_wednesday" />

                <CheckBox
                    android:id="@+id/chk_schedule_update_thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chk_schedule_update_thursday" />

                <CheckBox
                    android:id="@+id/chk_schedule_update_friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chk_schedule_update_friday" />

                <CheckBox
                    android:id="@+id/chk_schedule_update_saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chk_schedule_update_saturday" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/building_location_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textview_schedule_update_building_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_schedule_update_building_location"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinner_schedule_update_building_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/buildings"
                android:prompt="@string/schedule_update_building_spinner_prompt" />

        </TableRow>

        <TableRow
            android:id="@+id/room_location_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textview_schedule_update_room_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_schedule_update_room_location"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edittext_schedule_update_room_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:id="@+id/buttons_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_schedule_update_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_schedule_update_cancel" />

            <Button
                android:id="@+id/btn_schedule_update_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_add_class" />

        </TableRow>

    </TableLayout>

</ScrollView>